package co.edu.unicauca.piedraazul.model;

public enum EstadoCita {
    PROGRAMADA,
    COMPLETADA,
    CANCELADA
}