@startuml Clases_Componente_Citas
title Sistema Piedra Azul - Diagrama de Clases
title Componente importante: Gestión de Citas

skinparam classAttributeIconSize 0

package "Componente Gestión de Citas" {

    interface CitaService {
        +agendarCita(cita: Cita) : Cita
        +listarCitas() : List<Cita>
        +buscarPorId(id: Long) : Cita
        +cancelarCita(id: Long) : void
        +reagendarCita(id: Long, nuevaFechaHora: LocalDateTime) : Cita
        +obtenerCitasPorMedico(idMedico: Long) : List<Cita>
    }

    class CitaServiceImpl {
        -citaRepository : CitaRepository
        -pacienteRepository : PacienteRepository
        -medicoRepository : MedicoRepository
        +agendarCita(cita: Cita) : Cita
        +listarCitas() : List<Cita>
        +buscarPorId(id: Long) : Cita
        +cancelarCita(id: Long) : void
        +reagendarCita(id: Long, nuevaFechaHora: LocalDateTime) : Cita
        +obtenerCitasPorMedico(idMedico: Long) : List<Cita>
        -validarDisponibilidad(medico: Medico, fechaHora: LocalDateTime) : boolean
    }

    interface CitaRepository {
        +save(cita: Cita) : Cita
        +findById(id: Long) : Optional<Cita>
        +findAll() : List<Cita>
        +findByMedicoId(idMedico: Long) : List<Cita>
        +deleteById(id: Long) : void
    }

    interface PacienteRepository {
        +findById(id: Long) : Optional<Paciente>
    }

    interface MedicoRepository {
        +findById(id: Long) : Optional<Medico>
    }

    class Cita {
        -id : Long
        -fechaHora : LocalDateTime
        -motivo : String
        -estado : EstadoCita
        -paciente : Paciente
        -medico : Medico
        +getId() : Long
        +getFechaHora() : LocalDateTime
        +getMotivo() : String
        +getEstado() : EstadoCita
        +setEstado(estado: EstadoCita) : void
    }

    class Paciente {
        -id : Long
        -nombre : String
        -apellido : String
        -documento : String
        -telefono : String
    }

    class Medico {
        -id : Long
        -nombre : String
        -apellido : String
        -especialidad : String
    }

    enum EstadoCita {
        PROGRAMADA
        CANCELADA
        ATENDIDA
        REAGENDADA
    }
}

CitaServiceImpl ..|> CitaService
CitaServiceImpl --> CitaRepository
CitaServiceImpl --> PacienteRepository
CitaServiceImpl --> MedicoRepository

Cita --> Paciente
Cita --> Medico
Cita --> EstadoCita

@enduml
